<resources>
    <string name="app_name">ComandaAppAdm</string>
    <string name="pizzaria">PIZZARIA</string>
    <string name="la_casa">LA CASA</string>
    <string name="cadastro">CADASTRO</string>
    <string name="categoria">CATEGORIA</string>
    <string name="configProduto">CONFIGURAÇÕES\n DE PRODUTO</string>
    <string name="produto">PRODUTO</string>
    <string name="listaProdutos">LISTA DE\n PRODUTOS</string>
    <string name="nome">Nome</string>
    <string name="novo">NOVO</string>
    <string name="atualizar">ATUALIZAR</string>
    <string name="apagar">APAGAR</string>
    <string name="configuracao">CONFIGURAÇÃO\n DE PRODUTO</string>
    <string name="config_values">VALORES DE\n CONFIGURAÇÃO</string>
    <string name="nova_configuracao">Adicionar Configuração</string>
</resources>
